Added global settings class, added loading bookmark classes from the classpath, added replacing bookmark class name from a setting in the settings file and loading that class.